Create PutGameRecordHandler
