# src/main/java/pl/zajacp/PutGameRecordHandler.java
@@ -4,30 +4,28 @@ import com.amazonaws.services.lambda.runtime.Context;
 import com.amazonaws.services.lambda.runtime.RequestHandler;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyResponseEvent;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import lombok.AllArgsConstructor;
 import pl.zajacp.model.GameRecord;
-import pl.zajacp.model.GamesLog;
 import pl.zajacp.repository.DynamoDbRepository;
-import pl.zajacp.repository.DynamoDbRepository.QueryOrder;
 import pl.zajacp.repository.GamesLogRepository;
-import pl.zajacp.repository.ItemQueryKey;
+import pl.zajacp.rest.GameValidator;
 import pl.zajacp.shared.ObjMapper;
 
-import java.util.List;
-
 import static pl.zajacp.repository.GameLogRepositoryCommons.GLOBAL_USER;
-import static pl.zajacp.repository.GameLogRepositoryCommons.getGamesLogKey;
 import static pl.zajacp.rest.RestCommons.SERVER_ERROR_MESSAGE;
+import static pl.zajacp.rest.RestCommons.UNSUPPORTED_JSON_ERROR_MESSAGE;
 import static pl.zajacp.rest.RestCommons.asErrorJson;
 import static pl.zajacp.rest.RestCommons.getResponseEvent;
 import static pl.zajacp.rest.RestCommons.getUserFromHeader;
+import static pl.zajacp.rest.RestCommons.getValidationFailedResponseEvent;
 
 @AllArgsConstructor
-public class GetGamesLogHandler implements RequestHandler<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> {
+public class PutGameRecordHandler implements RequestHandler<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> {
 
     private final DynamoDbRepository<GameRecord> gameItemRepository;
 
-    public GetGamesLogHandler() {
+    public PutGameRecordHandler() {
         this.gameItemRepository = GamesLogRepository.INSTANCE.get();
     }
 
@@ -37,15 +35,22 @@ public class GetGamesLogHandler implements RequestHandler<APIGatewayProxyRequest
 
         var responseEvent = getResponseEvent();
         try {
-            ItemQueryKey itemQueryKey = getGamesLogKey(getUserFromHeader(requestEvent, GLOBAL_USER));
+            GameRecord gameRecord = ObjMapper.INSTANCE.get().readValue(requestEvent.getBody(), GameRecord.class);
 
-            List<GameRecord> games = gameItemRepository.getItems(itemQueryKey, QueryOrder.DESC);
+            var validationErrors = GameValidator.validateGameRecord(gameRecord);
 
-            String gameJson = ObjMapper.INSTANCE.get().writeValueAsString(new GamesLog(games));
+            if (!validationErrors.isEmpty()) {
+                return getValidationFailedResponseEvent(validationErrors);
+            }
 
+            gameRecord.setUserName(getUserFromHeader(requestEvent, GLOBAL_USER));
+            gameItemRepository.putItem(gameRecord);
+
+            responseEvent.withStatusCode(204);
+        } catch (JsonProcessingException e) {
             responseEvent
-                    .withBody(gameJson)
-                    .withStatusCode(200);
+                    .withStatusCode(400)
+                    .withBody(asErrorJson(UNSUPPORTED_JSON_ERROR_MESSAGE, e));
         } catch (Exception e) {
             responseEvent
                     .withStatusCode(500)
@@ -54,4 +59,3 @@ public class GetGamesLogHandler implements RequestHandler<APIGatewayProxyRequest
         return responseEvent;
     }
 }
-
